[package]
name = "rust-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = "0.3.0"
azure_core = "0.3.0"
rustdotenv = "0.1.2"
async-std = "1.12.0"
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.81"
